Fix whitespace and accidentally reverted fixes from master

--- a/hugo/assets/css/main.scss
+++ b/hugo/assets/css/main.scss
@@ -102,6 +102,14 @@ ol ol {
   @extend .mt-2;
 }
 
+/* For co-author/venue info on people/ pages */
+.list-group-compact {
+  .list-group-item {
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+
 /* Simple toggle buttons for list entries */
 .list-group-toggle-btn {
   cursor: pointer;
